# BVMatch

./: CMakeLists.txt
scripts/: train_model.py
src/: bvftdescriptors.cpp  bvftdescriptors.h  generate_descriptors.cpp  generate_descriptors.hpp  match_two_scan.cpp  match_two_scan.hpp  utils.cpp  utils.hpp
